tests/should_fail/match_empty_list_on_int.nv
module test
// match: empty list pattern on Int type (not a list)
fn bad(n: Int) -> String {
    return match n {
        [] => "empty",
        _  => "other"
    }
}
